# Msc_IA_UA

./: README.md
AGENTES Y SISTEMAS MULTIAGENTE/Agentes/ASM/: .project  README.md
AGENTES Y SISTEMAS MULTIAGENTE/Agentes/CMG/: .project
AGENTES Y SISTEMAS MULTIAGENTE/Agentes/Unclassified Models/: .project
AGENTES Y SISTEMAS MULTIAGENTE/Agentes/Wumpus/: .project
AGENTES Y SISTEMAS MULTIAGENTE/Bloque 2/Preguntas/: Respuestas.md
AGENTES Y SISTEMAS MULTIAGENTE/Bloque 3/Preguntas/: respuestas.md
AGENTES Y SISTEMAS MULTIAGENTE/Prácticas/Entrega/: ModelConnection.py  robots.gaml
APLICACIONES DEL PROCESAMIENTO DE LENGUAJE NATURAL/Entrega TA/: Readme.txt  apln_ta.ipynb
APLICACIONES DEL PROCESAMIENTO DE LENGUAJE NATURAL/Entrega TA/Corpus/: Dev.en  Dev.es  MonolingueEN.txt  MonolingueES.txt  Test.en  Test.es  bilingue.en  bilingue.es
APLICACIONES DEL PROCESAMIENTO DE LENGUAJE NATURAL/Grupal/: hyp_bert-large-uncased-whole-word-masking-finetuned-squad.txt  hyp_distilbert-base-cased-distilled-squad.txt  hyp_dynamic_tinybert.txt  hyp_roberta-base-squad2.txt  qa_apln.py  ref.txt
APRENDIZAJE PROFUNDO/Notebooks/: Copia de Enunciado_proto_CS330_Homework2_Stencil_TF2.0.ipynb  Copia de Master_AI_AP_4.ipynb  Master_AI_3.ipynb  Master_AI_AP_1.ipynb  Master_AI_AP_2.ipynb
ARQUITECTURAS E INFRAESTRUCTURAS PARA INTELIGENCIA ARTIFICIAL/Práctica/CodigoPracticaDocker/: Dockerfile  README.md  docker-compose.yml  requirements.txt
ARQUITECTURAS E INFRAESTRUCTURAS PARA INTELIGENCIA ARTIFICIAL/Práctica/Notebooks/: Practica_CUDA(Numba).ipynb  Practica_QC.ipynb
RAZONAMIENTO COMPUTACIONAL BAJO INCERTIDUMBRE/Practica final/: linkTrabajo.txt
RAZONAMIENTO COMPUTACIONAL BAJO INCERTIDUMBRE/Practica final/Entrega/: links.txt
RAZONAMIENTO COMPUTACIONAL BAJO INCERTIDUMBRE/Practica final/LightGCN/: README.md  makefile  requirements.txt
RAZONAMIENTO COMPUTACIONAL BAJO INCERTIDUMBRE/Tema 2/: GNN_Tarea1.ipynb
RAZONAMIENTO COMPUTACIONAL BAJO INCERTIDUMBRE/Tema 3/tarea3/: Tarea2.ipynb
RAZONAMIENTO COMPUTACIONAL BAJO INCERTIDUMBRE/Tema 4/: Tarea3.ipynb
RAZONAMIENTO COMPUTACIONAL BAJO INCERTIDUMBRE/Tema 4/.ipynb_checkpoints/: Tarea3-checkpoint.ipynb
RAZONAMIENTO COMPUTACIONAL BAJO INCERTIDUMBRE/Tema 5/.ipynb_checkpoints/: Tarea4-checkpoint.ipynb
ROBÓTICA INTELIGENTE/Practicas/P1/Robotica_inteligente_practica/src/GeoGraspEvo/geograspevo/: package.xml
ROBÓTICA INTELIGENTE/Practicas/P1/Robotica_inteligente_practica/src/GeoGraspEvo/geograspevo/lib/geograspevo/: GeoGraspEvo copy.cpp  GeoGraspEvoIMG.cpp  GeoGraspEvoJornadas.cpp  GeoGraspEvo_i.cpp
ROBÓTICA INTELIGENTE/Practicas/P1/Robotica_inteligente_practica/src/GeoGraspEvo/geograspevo/src/: cloud_processor.cpp  cloud_processor_ETFA.cpp
ROBÓTICA INTELIGENTE/Practicas/P1/Robotica_inteligente_practica/src/experiment_settings/: CMakeLists.txt  package.xml
ROBÓTICA INTELIGENTE/Practicas/P1/Robotica_inteligente_practica/src/experiment_settings/action/: IK.action
ROBÓTICA INTELIGENTE/Practicas/P1/Robotica_inteligente_practica/src/experiment_settings/launch/: moveit_4f.launch  prueba.launch  simulation.launch  simulation_4f.launch
ROBÓTICA INTELIGENTE/Practicas/P1/Robotica_inteligente_practica/src/experiment_settings/msg/: Grasp.msg  GraspEvoContacts.msg  Object.msg
ROBÓTICA INTELIGENTE/Practicas/P1/Robotica_inteligente_practica/src/experiment_settings/scripts/: joint2grip.py  main_gripper_controller_real.py  prueba_moveit_real.py
ROBÓTICA INTELIGENTE/Practicas/P1/Robotica_inteligente_practica/src/experiment_settings/src/: object.cpp
ROBÓTICA INTELIGENTE/Practicas/P1/Robotica_inteligente_practica/src/experiment_settings/stl/: mesa_lab.stl  ur_gripper.stl
ROBÓTICA INTELIGENTE/Practicas/P1/Robotica_inteligente_practica/src/experiment_settings/urdf/: ur5e_4f.urdf.xacro  ur5e_real.xacro  ur5e_sim.xacro  ur5e_sim_4f.xacro
ROBÓTICA INTELIGENTE/Practicas/P1/Robotica_inteligente_practica/src/robotiq/robotiq_3f_gripper_control/: package.xml  setup.py
ROBÓTICA INTELIGENTE/Practicas/P2/robotica_inteligente/src/GeoGraspEvo/geograspevo/: CMakeLists.txt
ROBÓTICA INTELIGENTE/Practicas/P2/robotica_inteligente/src/GeoGraspEvo/geograspevo/include/geograspevo/: GeoGraspEvo.h
ROBÓTICA INTELIGENTE/Practicas/P2/robotica_inteligente/src/GeoGraspEvo/geograspevo/lib/geograspevo/: GeoGraspEvo.cpp  GeoGrasp_s.cpp
ROBÓTICA INTELIGENTE/Practicas/P2/robotica_inteligente/src/GeoGraspEvo/geograspevo/src/: cloud_processor2.cpp  cloud_processorJornadas.cpp  cloud_processor_2.cpp
ROBÓTICA INTELIGENTE/Practicas/P2/robotica_inteligente/src/robotiq/robotiq_2f_gripper_control/: package.xml
TÉCNICAS AVANZADAS DE VISIÓN ARTIFICIAL/: Copia de Generative Models.ipynb  Copia de PCR.ipynb  Copia de TAVA - Object detection.ipynb
TÉCNICAS AVANZADAS DE VISIÓN ARTIFICIAL/VIDEO/: Copia de MHI.ipynb  Copia de Optical flow.ipynb  Copia de ST_GCN.ipynb  Copia de vivit
TÉCNICAS DE APRENDIZAJE AUTOMÁTICO/5 Reinforcemente Learning/: T05_AprendizajeRefuerzo_Actividad_02_QLearn_es.ipynb  T05_AprendizajeRefuerzo_Actividad_03_QLearn_es.ipynb  T05_AprendizajeRefuerzo_Actividad_04_SARSA_es.ipynb
TÉCNICAS DE APRENDIZAJE AUTOMÁTICO/Practica/: 1.2-Uso de vectores con Numpy-en.ipynb  1.3-Tablas de datos con Pandas y gráficos básicos-en.ipynb  3_2_Aprendizaje_supervisado_NN_es.ipynb  3_4_Aprendizaje_supervisado_NaiveBayes_es.ipynb  3_5_Aprendizaje_supervisado_SVM_es.ipynb  3_6_Aprendizaje_supervisado_ANN_es.ipynb
TÉCNICAS DE APRENDIZAJE AUTOMÁTICO/Practica/.ipynb_checkpoints/: 1.1-Python-en-checkpoint.ipynb  1.2-Uso de vectores con Numpy-en-checkpoint.ipynb  1.3-Tablas de datos con Pandas y gráficos básicos-en-checkpoint.ipynb  3_2_Aprendizaje_supervisado_NN_es-checkpoint.ipynb  3_3_Aprendizaje_supervisado_DT_es-checkpoint.ipynb  3_4_Aprendizaje_supervisado_NaiveBayes_es-checkpoint.ipynb  3_5_Aprendizaje_supervisado_SVM_es-checkpoint.ipynb  3_6_Aprendizaje_supervisado_ANN_es-checkpoint.ipynb
TÉCNICAS DE PROCESAMIENTO DE LENGUAJE NATURAL/Examen/: examen.py
TÉCNICAS DE VISIÓN ARTIFICIAL/Trabajo/: laMejor.py  myretina.ipynb  otrabuena.py  retina.ipynb
(+500 files in other folders)
