<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>robotiq_3f_gripper_control</name>
  <version>1.0.0</version>
  <description>Package to control a 3F gripper Gripper from Robotiq inc.</description>
  <maintainer email="ros@robotiq.com">Jean-Philippe Roberge</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/robotiq</url>

  <author>Nicolas Lauzier (Robotiq inc.)</author>
  <author email="althackston@gmail.com">Allison Thackston</author>

  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>controller_manager</depend>
  <depend>diagnostic_updater</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>hardware_interface</depend>
  <depend>robotiq_ethercat</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>socketcan_interface</depend>
  <depend>std_srvs</depend>
  <depend>robotiq_3f_gripper_articulated_msgs</depend>

</package>
